[project]
name = "imposter-game"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tapoozz", email = "yuvalarazi2006@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "termcolor>=3.1.0",
]

[project.scripts]
imposter-game = "imposter_game:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
